force-app/main/default/objects/Pathology_Request__c/Pathology_Request__c.object-meta.xml
<CustomObject>
    <label>Pathology Request</label>
    <nameField>
        <label>Pathology Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pathology Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>