force-app/main/default/objects/Pathology_Request__c/fields/All_Tests__c.field-meta.xml
<CustomField>
    <fullName>All_Tests__c</fullName>
    <label>All Tests</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>