force-app/main/default/objects/Pathology_Request__c/fields/Bloods_in_Sydney__c.field-meta.xml
<CustomField>
    <fullName>Bloods_in_Sydney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloods in Sydney?</label>
    <type>Checkbox</type>
</CustomField>