force-app/main/default/objects/Pathology_Request__c/fields/Bulk_Bill__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecting this option specifies &quot;Bulk Bill&quot; on the Pathology Request Form, if left unselected &quot;In Cycle&quot; will appear on the Pathology Request instead.</inlineHelpText>
    <label>Bulk Bill</label>
    <type>Checkbox</type>
</CustomField>