force-app/main/default/objects/Pathology_Request__c/fields/Bulk_Bill_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Bill_as_Text__c</fullName>
    <formula>IF (Bulk_Bill__c = TRUE, &quot;BULK BILL&quot;, &quot;IN CYCLE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bulk Bill as Text</label>
    <type>Text</type>
</CustomField>