force-app/main/default/objects/Pathology_Request__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Pathology Requests</relationshipLabel>
    <relationshipName>Pathology_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>