force-app/main/default/objects/Pathology_Request__c/fields/Doctor_s_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_Provider_Number__c</fullName>
    <formula>IF(
    Bulk_Bill__c = TRUE,
    Requesting_Doctor__r.Provider_Number__c,
    IF(
        Bulk_Bill__c = FALSE,
        Requesting_Doctor__r.Clinic_Provider_Number__c,
        Requesting_Doctor__r.Clinic_Provider_Number__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor&apos;s Provider Number</label>
    <type>Text</type>
</CustomField>