force-app/main/default/objects/Pathology_Request__c/fields/Pathology_Provider__c.field-meta.xml
<CustomField>
    <fullName>Pathology_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pathology Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>0125g000000affYAAQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pathology Requests (Pathology Provider)</relationshipLabel>
    <relationshipName>Pathology_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>