force-app/main/default/objects/Pathology_Request__c/fields/Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor__c</fullName>
    <label>Patient &amp; Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pathology Requests</relationshipLabel>
    <relationshipName>Pathology_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>