force-app/main/default/objects/Pathology_Request__c/fields/Requesting_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Pathology Requests</relationshipLabel>
    <relationshipName>Pathology_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>