force-app/main/default/objects/Pathology_Request__c/fields/Requesting_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Pathology Requests</relationshipLabel>
    <relationshipName>Pathology_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>