force-app/main/default/objects/Pathology_Request__c/fields/Scan_Count__c.field-meta.xml
<CustomField>
    <fullName>Scan_Count__c</fullName>
    <label>Scan Count</label>
    <summaryFilterItems>
        <field>Pathology_Request_Test__c.Test_Type__c</field>
        <operation>equals</operation>
        <value>Scan</value>
    </summaryFilterItems>
    <summaryForeignKey>Pathology_Request_Test__c.Pathology_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>