force-app/main/default/objects/Pathology_Request__c/fields/Scan_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Scan_Date_and_Time__c</fullName>
    <label>Scan Date and Time</label>
    <type>DateTime</type>
</CustomField>