force-app/main/default/objects/Pathology_Request__c/fields/Scan_Site__c.field-meta.xml
<CustomField>
    <fullName>Scan_Site__c</fullName>
    <label>Scan Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>