force-app/main/default/objects/Pathology_Request__c/fields/Urgent_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Urgent_as_Text__c</fullName>
    <formula>IF(
    Bloods_in_Sydney__c = TRUE,
    &quot;**URGENT** Specimens to be placed in red urgent specimen bags with request form. These are to be placed in urgent IVF purple courier satchel with IVF Courier Cover Sheet. Raise a Click-To-Collect Courier request stating: Contracted Urgent IVF sample.&quot;,
    IF(
        Urgent__c = TRUE,
        &quot;URGENT&quot;,
        &apos;&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgent as Text</label>
    <type>Text</type>
</CustomField>