force-app/main/default/objects/Pathology_Request__c/listViews/All_Pathology_Requests.listView-meta.xml
<ListView>
    <fullName>All_Pathology_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Pathology Requests</label>
</ListView>